--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
 				<h3>联系我</h3>
 				<h5>Contact me</h5>
 				<ul>
-					<li>GitHub：<a href="#">zhangquan1995</a></li>
-					<li>CSDN：<a href="#">zhangquan2015</a></li>
-					<li>Email：<a href="#">zhangquan2014@foxmail.com</a></li>
-					<li>WeiBo：<a href="#">爱上小萌女</a></li>
+					<li>GitHub：<a href="#">XXXXXXX</a></li>
+					<li>CSDN：<a href="#">XXXXXXX</a></li>
+					<li>Email：<a href="#">XXXXXXX</a></li>
+					<li>WeiBo：<a href="#">XXXXXXX</a></li>
 				</ul>
 			</div>
 		</div>
